<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>all_sensors_launch</name>
  <version>0.0.0</version>
  <description>Launch file package for running lidar, camera, and IMU sensors in a single launch file.</description>
  <maintainer email="suryasin@umich.edu">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for sensor packages and tf2_ros -->
  <depend>rslidar_sdk</depend>
  <depend>realsense2_camera</depend>
  <depend>vectornav</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

